Added Fortify nightly pipeline integration